tests/syntax/bad/testfile-if_else-1.scala
class A { def m() { if (true) ; else } }
object Main { def main(args: Array[String]) { } }
